hphp/hack/test/typecheck/enum_class_label/memoized_wrong_enum_class.php.rust_elab.exp
File "memoized_wrong_enum_class.php", line 3, characters 12-18:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
