hphp/hack/test/typecheck/enum_class_label/memoized_wrong_enum_class.php
<?hh

enum class MyClass: string {
  string KeyedByIC = 'KeyedByIC';
}

<<__Memoize(MyClass#KeyedByIC)>>
function foo(): void {}
